@@ -46,9 +46,9 @@ extern int loadfont_main(int argc, char **argv)
 	if (argc != 1)
 		show_usage();
 
-	fd = open("/dev/tty0", O_RDWR);
+	fd = open(CURRENT_VC, O_RDWR);
 	if (fd < 0)
-		perror_msg_and_die("Error opening /dev/tty0");
+		perror_msg_and_die("Error opening " CURRENT_VC);
 	loadnewfont(fd);
 
 	return EXIT_SUCCESS;
